Fix desktop nav links overlapping hero

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -43,7 +43,7 @@ body {
 header {
   background-color: $bg;
 }
-nav {
+#nav-topbar {
   height: 60px;
   padding: 0 20px;
   display: flex;
@@ -94,13 +94,6 @@ nav {
   }
 }
 
-#nav-search-bar,
-#nav-links {
-  position: absolute;
-  top: 60px; // under navbar
-  left: 0;
-  width: 100%;
-}
 #nav-links,
 #nav-search-bar input[type="search"] {
   border-top: 2px solid $brown-2;
@@ -378,6 +371,14 @@ footer {
     display: none;
   }
 
+  #nav-search-bar,
+  #nav-links {
+    position: absolute;
+    top: 60px; // under navbar
+    left: 0;
+    width: 100%;
+  }
+
   #nav-links {
     padding: 10px 20px;
 
@@ -399,7 +400,7 @@ footer {
     display: none;
   }
 
-  nav,
+  #nav-topbar,
   #nav-links ul {
     max-width: 1000px;
     margin: 0 auto;
